commit dist by chen-lin-accounting-report-frontend-private workflow

--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,11 @@
         }
       ]
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/backend/(.*)",
+      "destination": "http://101.35.218.107:9088/backend/$1"
+    }
   ]
 }
